# wikiscraper

./: .gitignore  .pylintrc  README.md  __init__.py  config.json  configDE.json  config_debug.json  language analysis.ipynb  pyproject.toml  requirements.txt  wikiscraper.ipynb
language_analysis/: language_analysis.ipynb
language_analysis/analysis_configs/: config_en.json
language_analysis/offwiki_texts/: README.md  pl.txt
src/: main.py  word-counts.json
src/analysis/: __init__.py  text_analyzer.py
src/scraper/: __init__.py  base.py  factory.py  stardew.py  stardew_file_wrapper.py
src/utils/: config.py
src/wikiscraper/: __init__.py  main.py
tests/: integration_test.py  unit_tests.py
tests/configs/: config_tests.json
tests/input/: Animals.html  Golden_Walnut.html  Ice_Cream.html  Oasis.html  README.md  Robin.html
