[project]
name = "wikiscraper"
version = "0.1.0"
description = "Modular Wikipedia scraper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyterlab>=4.5.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
